Refactored REST endpoints. WARNING: beaking change. openapi.json is up to date
